trab3 ainda não roda
Estou perto de fazer roda, acho que preciso de dll s adicionais

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -55,6 +55,10 @@
         "fstream": "cpp",
         "list": "cpp",
         "unordered_map": "cpp",
-        "xhash": "cpp"
+        "xhash": "cpp",
+        "array": "cpp",
+        "cwctype": "cpp",
+        "ranges": "cpp",
+        "string_view": "cpp"
     }
 }
