--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -60,5 +60,13 @@
         "cwctype": "cpp",
         "ranges": "cpp",
         "string_view": "cpp"
-    }
+    },
+    "cSpell.words": [
+        "Frabis",
+        "GAMEOBJECT",
+        "hitpoints",
+        "Joao",
+        "PADRAO",
+        "SPRITERENDERER"
+    ]
 }
