Sistemas input Criado
Agora jogo pode capturar input

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,8 +66,10 @@
         "GAMEOBJECT",
         "hitpoints",
         "Joao",
+        "keysym",
         "libogg",
         "PADRAO",
+        "SDLK",
         "SPRITERENDERER"
     ]
 
