--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -62,6 +62,7 @@
         "string_view": "cpp"
     },
     "cSpell.words": [
+        "crasha",
         "Frabis",
         "GAMEOBJECT",
         "hitpoints",
